--- a/web/src/language/locales/zh.json
+++ b/web/src/language/locales/zh.json
@@ -105,5 +105,15 @@
     "operatePlace": "操作地",
     "time": "耗时",
     "errorMsg": "错误信息"
+  },
+  "file": {
+    "file": "文件",
+    "file view": "文件视图",
+    "file list": "文件列表",
+    "fileName": "文件名称",
+    "url": "url地址",
+    "fileType": "文件类型",
+    "filePath": "文件路径",
+    "fileSize": "文件大小"
   }
 }
