--- a/web/src/language/locales/zh.json
+++ b/web/src/language/locales/zh.json
@@ -1,6 +1,7 @@
 {
   "system": {
     "Data Management Center": "数据管理中心",
+    "Video Web": "视 频 网",
     "action": "操作",
     "add": "新增",
     "cancel": "取消",
