--- a/web/src/language/locales/en.json
+++ b/web/src/language/locales/en.json
@@ -22,6 +22,7 @@
     "collection": "collect",
     "history": "history",
     "message": "information",
+    "uploadFile": "uploadFile",
     "Data Management Center": "Data Management Center",
     "Video Web": "video network"
   },
