--- a/web/src/language/locales/zh.json
+++ b/web/src/language/locales/zh.json
@@ -13,6 +13,7 @@
     "import": "导入",
     "no": "序号",
     "query": "查询",
+    "table query": "全表查询",
     "reset": "重置",
     "save": "保存",
     "drop to sort": "拖拽排序",
