--- a/web/src/language/locales/zh.json
+++ b/web/src/language/locales/zh.json
@@ -9,15 +9,17 @@
     "delete in bulk": "批量删除",
     "detail": "详情",
     "edit": "修改",
+    "copy": "复制",
     "export": "导出",
     "import": "导入",
     "no": "序号",
     "query": "查询",
-    "table query": "全表查询",
+    "table search": "全表搜索",
     "reset": "重置",
     "save": "保存",
     "drop to sort": "拖拽排序",
     "show": "展开",
+    "confirm": "确认",
     "watermark": "水印",
     "back": "返回",
     "base info": "基础信息",
@@ -25,6 +27,8 @@
     "history": "历 史",
     "collection": "收 藏",
     "is no null": "不能为空",
+    "filter": "筛选",
+    "is remove data": "是否删除数据",
     "uploadFile": "文件上传"
   },
   "form": {
@@ -159,5 +163,26 @@
     "operateResults": "操作结果",
     "status": "状态",
     "createTime": "登录时间"
+  },
+  "video": {
+    "video": "视频",
+    "parentId": "父节点id",
+    "savePath": "视频存储节点",
+    "videoName": "视频名称",
+    "title": "视频标题",
+    "category": "视频分类",
+    "type": "视频类型",
+    "region": "视频地区",
+    "url": "url地址",
+    "picture": "视频图片",
+    "profile": "视频简介",
+    "label": "标签",
+    "author": "作者",
+    "season": "季",
+    "episode": "集",
+    "playNum": "播放量",
+    "isCollection": "是否是集合",
+    "duration": "时长",
+    "createYear": "创作年份"
   }
 }
