--- a/web/src/language/locales/zh.json
+++ b/web/src/language/locales/zh.json
@@ -70,7 +70,7 @@
   },
   "page": {
     "page": "配置页面",
-    "menuId": "页面id",
+    "menuId": "页面",
     "options": "页面配置",
     "pageCode": "页面编码"
   },
